--- a/API Assignment/RestAssured/pom.xml
+++ b/API Assignment/RestAssured/pom.xml
@@ -36,7 +36,7 @@
 		   <artifactId>tools</artifactId>
 		   <version>1.6</version>
 		   <scope>system</scope>
-		   <systemPath>C:\Program Files\Java\jdk1.8.0_111\lib\tools.jar</systemPath>
+		   <systemPath>${java.home}/../lib/tools.jar</systemPath>
 		 </dependency> 
  
 		<!-- https://mvnrepository.com/artifact/io.rest-assured/json-schema-validator -->
