--- a/API Assignment/RestAssured/pom.xml
+++ b/API Assignment/RestAssured/pom.xml
@@ -205,7 +205,19 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
-      </plugins>
+		<!-- Below plug-in is used to execute tests -->
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-surefire-plugin</artifactId>
+		<version>2.18.1</version>
+		<configuration>
+			<suiteXmlFiles>
+				<!-- TestNG suite XML files -->
+				<suiteXmlFile>testng.xml</suiteXmlFile>
+			</suiteXmlFiles>
+		</configuration>
+	</plugin>
+      <plugins>
     </pluginManagement>
     </build>
 </project>
