--- a/API Assignment/RestAssured/pom.xml
+++ b/API Assignment/RestAssured/pom.xml
@@ -217,7 +217,7 @@
 			</suiteXmlFiles>
 		</configuration>
 	</plugin>
-      <plugins>
+      </plugins>
     </pluginManagement>
     </build>
 </project>
