--- a/API Assignment/RestAssured/pom.xml
+++ b/API Assignment/RestAssured/pom.xml
@@ -209,11 +209,11 @@
 	<plugin>
 		<groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven-surefire-plugin</artifactId>
-		<version>2.18.1</version>
+		<version>2.20</version>
 		<configuration>
 			<suiteXmlFiles>
 				<!-- TestNG suite XML files -->
-				<suiteXmlFile>testng.xml</suiteXmlFile>
+				<suiteXmlFile>RESTAPI/API Assignment/RestAssured/testng.xml</suiteXmlFile>
 			</suiteXmlFiles>
 		</configuration>
 	</plugin>
